# draftops

./: .env.example  .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  UI_Redesign.md  eslint.config.mjs  jest.config.ts  jest.integration.config.ts  jest.integration.env.ts  jest.integration.global-setup.ts  jest.setup.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  security-audit.yml
docs/: draftops-audit-workstreams.md  draftops-projections-etl-brief.md
docs/api_examples/: sleeper-league.json  sleeper-users.json
docs/operations/: bid-recovery.md  database-connections.md  error-observability.md
docs/performance/: hard-017-baseline.json  hard-017.md
e2e/: auth.spec.ts  bid.spec.ts  csp.spec.ts  cspViolations.ts  databaseSafety.ts  db.ts  env.ts  global-setup.ts  nominate.spec.ts  performance.spec.ts  rosters.spec.ts  seed.ts
e2e/fixtures/: getDraftId.ts  players.ts
player_data/: AGENTS.md
prisma/: apply-projection-values.ts  backfill-budget-scaled-values.ts  migrate-sqlite-to-postgres.ts  schema.prisma  seed-players.ts  seed.ts  sync-players.ts  sync-sleeper-players.ts
public/: rankings-template.csv
scripts/: testDatabase.ts
src/: auth.ts  instrumentation-client.ts  instrumentation.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts
(+447 files in other folders)
