[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draftops-projections"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pdfplumber>=0.11.4"]

[project.optional-dependencies]
dev = ["mypy>=2.3.0", "pytest>=8.3.4", "ruff>=0.16.0"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["scripts/projections/draftops_projections", "scripts/projections/tests"]

[[tool.mypy.overrides]]
module = ["pdfplumber.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
where = ["scripts/projections"]
include = ["draftops_projections*"]
